Set module-path and add-modules in run task